@@ -1,3 +1,9 @@
+Tue Jun 25 20:08:29 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (rb_big2ulong_pack): Use rb_integer_pack.
+	  (rb_big_aref): Call big2ulong with TRUE for "check" argument.
+	  It should be non-effective.
+
 Tue Jun 25 19:07:33 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (LSHIFTX): Revert r41611.
